# ros2-omnibot

./: .dockerignore  README.md  docker-compose.m.yml  docker-compose.yml
docker/: Dockerfile  entrypoint.sh
ros2_ws/: station_camera.yaml
ros2_ws/src/omni_wheel_drive_controller/: CMakeLists.txt  omni_wheel_drive_plugin.xml  package.xml
ros2_ws/src/omni_wheel_drive_controller/include/omni_wheel_drive_controller/: odometry.hpp  omni_wheel_drive_controller.hpp
ros2_ws/src/omni_wheel_drive_controller/src/: odometry.cpp  omni_wheel_drive_controller.cpp  omni_wheel_drive_controller_parameters.yaml
ros2_ws/src/omni_wheel_hardware/: CMakeLists.txt  omni_wheel_hardware.xml  package.xml
ros2_ws/src/omni_wheel_hardware/src/: omni_wheel_hardware.cpp
ros2_ws/src/omnibot_actuator/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_actuator/config/: actuator.yaml  actuator.yml
ros2_ws/src/omnibot_actuator/launch/: actuator.launch.py
ros2_ws/src/omnibot_actuator/omnibot_actuator/: actuator_node.py
ros2_ws/src/omnibot_actuator/resource/: omnibot_actuator
ros2_ws/src/omnibot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_bringup/launch/: full_stack.launch.py  mission.launch.py  robot.launch.py  station.launch.py
ros2_ws/src/omnibot_bringup/missions/: demo.py
ros2_ws/src/omnibot_bringup/omnibot_bringup/: demo.py
ros2_ws/src/omnibot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_control/config/: actuator.yaml  motor_controller.yaml  servo_controller.yaml
ros2_ws/src/omnibot_control/launch/: actuator.launch.py  servo_controller.launch.py
ros2_ws/src/omnibot_control/omnibot_control/: actuator_node.py  actuator_test_node.py  encoder_node.cpp  encoder_node.py  gpio_compat.py  kinematic_node.cpp  manual_control.py  motor_controller_node.py  servo_controller_node.py  servo_test.py  test_pins.py  wheel_test.py
ros2_ws/src/omnibot_control/omnibot_control/actuator/: actuator_node.py  actuator_test_node.py  pca_test.py
ros2_ws/src/omnibot_control/omnibot_control/chip_control/: pca.py
ros2_ws/src/omnibot_control/resource/: omnibot_control
ros2_ws/src/omnibot_control_/launch/: motor_controller.launch.py  teleop.launch.py
ros2_ws/src/omnibot_control_/omnibot_control/: encoder_node.py
ros2_ws/src/omnibot_cv/: CMakeLists.txt  package.xml
ros2_ws/src/omnibot_cv/config/: aruco_localization.yaml  robot_camera.yaml  station_camera.yaml
ros2_ws/src/omnibot_cv/include/omnibot_cv/: aruco_geometry.hpp  world_pose_tracker.hpp
ros2_ws/src/omnibot_cv/launch/: aruco_localization.launch.py  camera_capture.launch.py  cv_pipeline.launch.py
ros2_ws/src/omnibot_cv/scripts/: calibrate_camera.py  capture_calibration_frames.py  generate_aruco_field.py
ros2_ws/src/omnibot_cv/src/: aruco_geometry.cpp  aruco_pose_node.cpp  aruco_pose_node_old.cpp  image_undistort_node.cpp  world_pose_tracker.cpp
ros2_ws/src/omnibot_encoder/: CMakeLists.txt  package.xml
ros2_ws/src/omnibot_encoder/config/: omni_controller.yaml
ros2_ws/src/omnibot_encoder/include/omnibot_encoder/: encoder_node.hpp  odometry.hpp  odometry_node.hpp
ros2_ws/src/omnibot_encoder/launch/: encoder.launch.py  odometry.launch.py
ros2_ws/src/omnibot_encoder/src/: encoder_node.cpp  odometry.cpp  odometry_node.cpp
ros2_ws/src/omnibot_goal/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_goal/launch/: goal.launch.py
ros2_ws/src/omnibot_goal/omnibot_goal/: goal_node.py
ros2_ws/src/omnibot_goal/resource/: omnibot_goal
ros2_ws/src/omnibot_kinematic/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_kinematic/config/: kinematic.yaml  kinematic.yml
ros2_ws/src/omnibot_kinematic/launch/: kinematic.launch.py
ros2_ws/src/omnibot_kinematic/omnibot_kinematic/: kinematic_node.py
ros2_ws/src/omnibot_kinematic/resource/: omnibot_kinematic
ros2_ws/src/omnibot_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_mission/launch/: mission.launch.py
ros2_ws/src/omnibot_mission/omnibot_mission/: __init__.py  mission_template.py  robot_api.py
ros2_ws/src/omnibot_movement/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_movement/launch/: movement.launch.py
ros2_ws/src/omnibot_movement/omnibot_movement/: movement_node.py
ros2_ws/src/omnibot_movement/resource/: omnibot_movement
ros2_ws/src/omnibot_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_perception/config/: lidar.yaml  rviz_config.rviz  safety.yaml  slam.yaml  tf_broadcaster.yaml
ros2_ws/src/omnibot_perception/launch/: lidar.launch.py  perception.launch.py  safety_node.launch.py  slam.launch.py
ros2_ws/src/omnibot_perception/omnibot_perception/: lidar_node.py  safety_node.py  servo_joint_state_node.py  tf_broadcaster.py
ros2_ws/src/omnibot_perception/urdf/: custom_white_gripper.urdf
ros2_ws/src/omnibot_pid_wheel/: CMakeLists.txt  package.xml
ros2_ws/src/omnibot_pid_wheel/include/omnibot_pid_wheel/: pid_wheel_node.hpp
ros2_ws/src/omnibot_pid_wheel/src/: pid_controller.cpp  pid_wheel_node.cpp
ros2_ws/src/omnibot_startup/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_startup/launch/: startup.launch.py
ros2_ws/src/omnibot_startup/omnibot_startup/: startup_node.py
ros2_ws/src/omnibot_startup/resource/: omnibot_startup
ros2_ws/src/omnibot_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_teleop/launch/: teleop.launch.py
ros2_ws/src/omnibot_teleop/omnibot_teleop/: teleop_node.py
ros2_ws/src/omnibot_teleop/resource/: omnibot_teleop
ros2_ws/src/omnibot_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/omnibot_vision/config/: aruco.yaml  calibration.yaml  camera.yaml  field_map_example.yaml
ros2_ws/src/omnibot_vision/launch/: vision.launch.py
ros2_ws/src/omnibot_vision/omnibot_vision/: aruco_pose_node.py  camera_calibration_capture.py  camera_node.py  fisheye_calibrate.py
ros2_ws/src/omnibot_vision/resource/: omnibot_vision
ros2_ws/src/resources/: actuator_manual_node.py  encoder_node.cpp  manual_control.py  simple_kinematic.py
ros2_ws/tests/: pca_test.py  test_encoder.py
(+5 files in other folders)
