<?xml version="1.0"?>
<package format="3">
  <name>omnibot_bringup</name>
  <version>0.1.0</version>
  <description>Common launch files for robot, station and mission orchestration.</description>
  <maintainer email="makar6002@mail.ru">omnibot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>omnibot_control</exec_depend>
  <exec_depend>omnibot_perception</exec_depend>
  <exec_depend>omnibot_cv</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
