<?xml version="1.0"?>
<package format="3">
  <name>omnibot_actuator</name>
  <version>0.1.0</version>
  <description>Actuator node for 3-wheel omnibot on Raspberry Pi.</description>
  <maintainer email="maintainer@example.com">omnibot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
